# challenges

./: README.md
awk/: coll.awk
c/: Makefile  main.c
c++/: Makefile  challenge4.cpp
c/c0ffee4bdb4630a97e514e35695913a6322defa9/: .gitignore  Makefile  c0ffee.c
golang/: main.go
haskell/c0ffee4bdb4630a97e514e35695913a6322defa9/: Main.hs  c0ffee.cabal
html/: aris.html
java/: build.gradle  run.sh
java/src/main/java/: MailAddressGenerator.java
nodejs/: cli.js  test.js  tlntmtch.js
nodejs/c0ffee1f2ac67a21138a148ae5eb9f3b6c1f6cdc/: proof.js
objective-c/: main.m
perl/: solution1.pl
python2/: brutec0ffee.py  pow.py
python3/: _find_mail_sha1.py  find_mail_sha1.py  find_sha1.py  first.py
ruby/: code.rb
rust/benjamin.bollen.30383317@seetale.com/: Cargo.toml
rust/benjamin.bollen.30383317@seetale.com/src/: main.rs
rust/c0ffee4bdb4630a97e514e35695913a6322defa9/: Cargo.toml
rust/c0ffee4bdb4630a97e514e35695913a6322defa9/src/: main.rs
scala/: Challenge.scala
shell/: cli.sh
swift/: main.swift
