name: c0ffee
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

executable c0ffee
  main-is: Main.hs
  build-depends:  base >=4.8 && <4.9, bytestring >=0.10 && <0.11, base16-bytestring >=0.1 && <0.2, cryptohash >=0.11 && <0.12
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2
